--- a/www/_includes/searchresults.html
+++ b/www/_includes/searchresults.html
@@ -26,12 +26,12 @@ $(document).ready(function() {
                 for (var loop in data.results) {
                     //console.log(data.results[loop]);
                     var result = data.results[loop];
-                    content.append($("<a>").attr("href", result.source).attr("title", result.description).append($("<img>").attr("src", "https://www.awesomelogos.org" + result.url).css("max-width", "128px").css("max-height", "64px")));
+                    content.append($("<a>").attr("href", result.source).attr("title", result.description).append($("<img>").attr("src", result.url).css("max-width", "128px").css("max-height", "64px")));
                 }
             }
         },
         timeout: 15000,
-        url: "https://www.awesomelogos.org/api/search.json"
+        url: "https://logosear.ch/api/search.json"
     });
 });
 </script>
