--- a/www/_includes/searchresults.html
+++ b/www/_includes/searchresults.html
@@ -1,7 +1,7 @@
 <div class="alert alert-info">
     Properly sized logos for {{page.title}} are not ready yet.
 </div>
-<h2>Search results from LogoSear.ch</h2>
+<h2>Search results from <a href="https://logosear.ch/search.html?q={{page.title | url_encode}}">LogoSear.ch</a></h2>
 <div class="searchresults logo-container">
     <img src="/images/spinner.svg" style="height:64px;" class="align-content-center" />
 </div>
