specified image height/width to prevent re-layout during loading

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -40,6 +40,7 @@
 	/* optional padding on visual inventory */
 	.padded { padding: 5px; }
     .maxsize { max-width: 120px; max-height: 120px; }
+    .ar21 { height: 60px; width: 120px; }
 
 	/* hide outline on a clicked tab */
 	.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
