--- a/www/_includes/meta-home.html
+++ b/www/_includes/meta-home.html
@@ -14,17 +14,26 @@
 {
     "@context": "http://schema.org",
     "@type": "Organization",
-    "url": "https://www.vectorlogo.zone",
+    "url": "https://www.vectorlogo.zone/",
     "name": "Vector Logo Zone",
     "logo": "https://www.vectorlogo.zone/favicon.svg",
-    "potentialAction": {
-        "@type": "SearchAction",
-        "target": "https://www.vectorlogo.zone/index.html?q={query}",
-        "query-input": "required name=query"
-    },
     "sameAs": [
         "https://www.facebook.com/VectorLogoZone/",
+        "https://github.com/VectorLogoZone/",
         "https://twitter.com/VectorLogoZone/"
     ]
+}
+</script>
+<script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "VectorLogoZone",
+    "url": "https://www.vectorlogo.zone/",
+    "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://www.vectorlogo.zone/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+    }
 }
 </script>
