--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -26,8 +26,8 @@
                     {%- if page.reddit %}<a title="Reddit" rel="nofollow" href="{{ page.reddit }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-reddit-alien icon-link"></i></a>{% endif -%}
                     {%- if page.wikipedia %}<a title="Wikipedia" href="{{ page.wikipedia }}"><i class="fab fa-wikipedia-w icon-link"></i></a>{% endif -%}
                     {%- if page.youtube %}<a title="YouTube" rel="nofollow" href="{{ page.youtube }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-youtube icon-link"></i></a>{% endif -%}
-					{%- if prev_page %}<a class="btn btn-secondary btn-xs" href="{{prev_page}}" title="Previous set of logos"><i class="fa fa-caret-left"></i><span class="d-none d-md-inline"> Previous</span></a>{% endif -%}
-					{%- if next_page %}&nbsp;<a class="btn btn-secondary btn-xs" href="{{next_page}}" title="Next set of logos"><span class="d-none d-md-inline">Next </span><i class="fa fa-caret-right"></i></a>{% endif -%}
+					{%- if site.data.nextprev[page.logohandle].prev %}<a class="btn btn-secondary btn-xs" href="/logos/{{site.data.nextprev[page.logohandle].prev.logohandle}}/index.html" title="{{site.data.nextprev[page.logohandle].prev.title}} Logos"><i class="fa fa-caret-left"></i><span class="d-none d-md-inline"> {{site.data.nextprev[page.logohandle].prev.title}}</span></a>{% endif -%}
+					{%- if site.data.nextprev[page.logohandle].next %}&nbsp;<a class="btn btn-secondary btn-xs" href="/logos/{{site.data.nextprev[page.logohandle].next.logohandle}}/index.html" title="{{site.data.nextprev[page.logohandle].next.title}} Logos"><span class="d-none d-md-inline">{{site.data.nextprev[page.logohandle].next.title}} </span><i class="fa fa-caret-right"></i></a>{% endif -%}
 				</div>
                 {%- endif %}
                 {%- if page.no_h1 %}{% else %}
