FIX: add alt text to spinners

--- a/www/_includes/searchresults.html
+++ b/www/_includes/searchresults.html
@@ -3,7 +3,7 @@
 </div>
 <h2>Search results from <a href="https://logosear.ch/search.html?q={{page.title | url_encode}}">LogoSear.ch</a></h2>
 <div class="searchresults logo-container">
-    <img src="/images/spinner.svg" style="height:64px;" class="align-content-center" />
+    <img alt="loading..." src="/images/spinner.svg" style="height:64px;" class="align-content-center" />
 </div>
 <script>
 $(document).ready(function() {
