--- a/www/_includes/uploads.html
+++ b/www/_includes/uploads.html
@@ -1,6 +1,6 @@
 <h2 id="uploadheader">Community Contributions</h2>
 <div class="logo-container" id="uploadresults">
-    <img src="/images/spinner.svg" style="height:64px;box-shadow:none;border:0;" class="align-content-center" />
+    <img alt="loading..." src="/images/spinner.svg" style="height:64px;box-shadow:none;border:0;" class="align-content-center" />
 </div>
 <p id="uploadbutton"><a class="btn btn-outline-primary" href="https://upload.vectorlogo.zone/logos/{{page.logohandle}}/index.html">Contribute a logo!</a></p>
 <script>
