FEATURE: raster images for social media metadata

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -135,19 +135,16 @@
 	<link rel="canonical" href="{{site.production_url}}/logos/{{page.logohandle}}/index.html" />
 	{%- endif -%}
 	{%- if page.images.size > 0 %}
-	<link rel="alternate" type="application/json+oembed"
-		  href="https://tools.vectorlogo.zone/oembed/oembed.json?url={{site.production_url | url_encode}}%2Flogos%2F{{page.logohandle}}%2Findex.html&format=json"
-		  title="oEmbed Link" />
 	<meta property="description" content="Vector logos for {{page.title}} in uniform sizes and layouts in the standard SVG file format" />
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="{{page.title}} SVG Vector Logos" />
 	<meta property="og:description" content="Vector logos for {{page.title}} in uniform sizes and layouts in the standard SVG file format" />
-	<meta property="og:image" content="{{site.production_url}}/logos/{{page.logohandle}}/{{page.logohandle}}-ar21.svg" />
+	<meta property="og:image" content="{{site.production_url}}/logos/{{page.logohandle}}/{{page.logohandle}}-ar21.png" />
 	<meta property="og:site_name" content="VectorLogoZone" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="{{page.title}} SVG Vector Logos" />
 	<meta name="twitter:description" content="Vector logos for {{page.title}} in uniform sizes and layouts in the standard SVG file format" />
-	<meta name="twitter:image" content="{{site.production_url}}/logos/{{page.logohandle}}/{{page.logohandle}}-ar21.svg" />
+	<meta name="twitter:image" content="{{site.production_url}}/logos/{{page.logohandle}}/{{page.logohandle}}-ar21.png" />
 	<script type="application/ld+json">
 	{
 	  "@context": "http://schema.org",
