FIX: shoelace v1 no longer available via CDN

--- a/www/_layouts/shoelace.html
+++ b/www/_layouts/shoelace.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>{{ page.title | default: "(untitled)" }}{% if page.images.size > 0 %} Vector Logos{% endif %} - {{ site.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.shoelace.style/1.0.0-beta24/shoelace.css">
+    <link rel="stylesheet" href="/css/shoelace.css">
     <link href="/css/fontawesome-all.css" rel="stylesheet" type="text/css" />
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
