--- a/www/_includes/footer.html
+++ b/www/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="d-print-none">
 	<p class="small text-muted text-center">
         Follow:
+        <a href="https://logo-of-the-day.vectorlogo.zone/" title="Logo of the day"><img alt="Logo of the day" src="https://logo-of-the-day.vectorlogo.zone/favicon.svg" class="social-footer"/></a>
         <a href="https://www.github.com/VectorLogoZone/vectorlogozone" title="Fork VectorLogoZone on Github"><img alt="Github" src="/logos/github/github-tile.svg" class="social-footer"/></a>
         <a href="https://www.facebook.com/vectorlogozone" title="Follow VectorLogoZone on Facebook"><img alt="Facebook" src="/logos/facebook/facebook-tile.svg" class="social-footer"/></a>
-        <a href="https://www.twitter.com/vectorlogozone" title="Follow VectorLogoZone on Twitter"><img alt="Twitter" src="/logos/twitter/twitter-tile.svg" class="social-footer"/></a>
         | <a href="https://validator.w3.org/check/referer">Validate HTML</a>
     </p>
 </footer>
