UPDATE: refer to LogoSearch with space in name

--- a/www/_includes/logosearch.html
+++ b/www/_includes/logosearch.html
@@ -1,6 +1,6 @@
 <p>Find alternatives:
     <a href="https://logosear.ch/search.html?q={{page.title | cgi_escape}}"
-       title="Search on LogoSear.ch"><img alt="LogoSear.ch logo" class="searchlogo" src="https://logosear.ch/favicon.svg" /></a>
+       title="Search on Logo Search"><img alt="Logo Search logo" class="searchlogo" src="https://logosear.ch/favicon.svg" /></a>
     <a href="https://commons.wikimedia.org/w/index.php?search={{page.title | cgi_escape}}+filemime%3Asvg"
        title="Search on Wikimedia Commons"><img alt="Wikipedia logo" class="searchlogo" src="{{site.production_url}}/logos/wikipedia/wikipedia-tile.svg" /></a>
     <a href="https://www.google.com/search?tbm=isch&tbs=ift:svg&q={{page.title | cgi_escape}}"
