--- a/www/_includes/meta-home.html
+++ b/www/_includes/meta-home.html
@@ -2,6 +2,7 @@
 <meta name="msvalidate.01" content="E90DBA4A9D3D37F1056E64E5604A7A0D" />
 <meta name="p:domain_verify" content="14ddd451c05dbfaecb9a7ad9505416c9"/>
 <meta name="yandex-verification" content="5392bc89f76e2ae0" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="prerender" href="/logos/index.html" />
 <link rel="license" href="https://github.com/VectorLogoZone/vectorlogozone/blob/main/LICENSE.txt" />
 <style>
@@ -20,7 +21,7 @@
     "sameAs": [
         "https://www.facebook.com/VectorLogoZone/",
         "https://github.com/VectorLogoZone/",
-        "https://twitter.com/VectorLogoZone/"
+        "https://botsin.space/@VectorLogoZone"
     ]
 }
 </script>
