--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -99,6 +99,12 @@
 	}
 	.copy2tip { display: none; }
 
+	a {
+		/* WAVE doesn't like bootstrap default #007bff */
+		color: #003bbf;
+	}
+
+
 	</style>
 	<script src="/js/jquery-3.3.1.min.js"></script>
 	<script src="/js/popper.min.js"></script>
