--- a/www/_includes/richcard.html
+++ b/www/_includes/richcard.html
@@ -8,6 +8,6 @@
   "thumbnailUrl": "{{site.production_url}}/logos/{{page.logohandle}}/{{page.logohandle}}-card.png",
   "uploadDate": "{{site.time|date_to_xmlschema}}",
   "contentUrl": "{{site.production_url}}/logos/{{page.logohandle}}/{{page.logohandle}}-ar21.svg",
-  "embedUrl": "{{site.production_url}}/util/preview.html?image=/logos/{{page.logohandle}}/{{page.logohandle}}-ar21.svg"
+  "embedUrl": "https://view.svg.zone/view.html?url={{site.production_url}}/logos/{{page.logohandle}}/{{page.logohandle}}-ar21.svg"
 }
 </script>
