Prep for converting github and twitter to full URLs

--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -10,48 +10,48 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-                {%- if page.logohandle -%}
+				{%- if page.logohandle -%}
 				<div class="float-right icon-link-header" style="padding-top:20px;">
-                    {%- if page.guide %}<a title="Official Guidelines" href="{{ page.guide }}"><i class="fa fa-certificate icon-link"></i></a>{% endif -%}
+					{%- if page.guide %}<a title="Official Guidelines" href="{{ page.guide }}"><i class="fa fa-certificate icon-link"></i></a>{% endif -%}
 					{%- if page.website %}<a title="Website" href="{{ page.website }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fal fa-globe icon-link"></i></a>{% endif -%}
 					{%- if page.blog %}<a title="Blog" href="{{ page.blog }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fa fa-rss-square icon-link"></i></a>{% endif -%}
 					{%- if page.facebook %}<a title="Facebook" rel="nofollow" href="{{ page.facebook }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-facebook-f icon-link"></i></a>{% endif -%}
-                    {%- if page.googleplus %}<a title="GooglePlus" rel="nofollow" href="{{ page.googleplus }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-google-plus-square icon-link"></i></a>{% endif -%}
-					{%- if page.github %}<a title="Github" href="https://github.com/{{ page.github }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-github icon-link"></i></a>{% endif -%}
-                    {%- if page.instagram %}<a title="Instagram" rel="nofollow" href="{{ page.instagram }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-instagram icon-link"></i></a>{% endif -%}
-                    {%- if page.linkedin %}<a title="Linkedin" rel="nofollow" href="{{ page.linkedin }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-linkedin icon-link"></i></a>{% endif -%}
-                    {%- if page.tumblr %}<a title="Tumblr" rel="nofollow" href="{{ page.tumblr }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-tumblr-square icon-link"></i></a>{% endif -%}
-					{%- if page.twitter %}<a title="Twitter" rel="nofollow" href="https://twitter.com/{{ page.twitter }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-twitter icon-link"></i></a>{% endif -%}
-                    {%- if page.pinterest %}<a title="Pinterest" rel="nofollow" href="{{ page.pinterest }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-pinterest icon-link"></i></a>{% endif -%}
-                    {%- if page.reddit %}<a title="Reddit" rel="nofollow" href="{{ page.reddit }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-reddit-alien icon-link"></i></a>{% endif -%}
-                    {%- if page.wikipedia %}<a title="Wikipedia" href="{{ page.wikipedia }}"><i class="fab fa-wikipedia-w icon-link"></i></a>{% endif -%}
-                    {%- if page.youtube %}<a title="YouTube" rel="nofollow" href="{{ page.youtube }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-youtube icon-link"></i></a>{% endif -%}
+					{%- if page.git %}<a title="Git" rel="nofollow" href="{{ page.git }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="far fa-code-branch icon-link"></i></a>{% endif -%}
+					{%- if page.googleplus %}<a title="GooglePlus" rel="nofollow" href="{{ page.googleplus }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-google-plus-square icon-link"></i></a>{% endif -%}
+					{%- if page.instagram %}<a title="Instagram" rel="nofollow" href="{{ page.instagram }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-instagram icon-link"></i></a>{% endif -%}
+					{%- if page.linkedin %}<a title="Linkedin" rel="nofollow" href="{{ page.linkedin }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-linkedin icon-link"></i></a>{% endif -%}
+					{%- if page.tumblr %}<a title="Tumblr" rel="nofollow" href="{{ page.tumblr }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-tumblr-square icon-link"></i></a>{% endif -%}
+					{%- if page.twitter %}<a title="Twitter" rel="nofollow" href="{{ page.twitter }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-twitter icon-link"></i></a>{% endif -%}
+					{%- if page.pinterest %}<a title="Pinterest" rel="nofollow" href="{{ page.pinterest }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-pinterest icon-link"></i></a>{% endif -%}
+					{%- if page.reddit %}<a title="Reddit" rel="nofollow" href="{{ page.reddit }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-reddit-alien icon-link"></i></a>{% endif -%}
+					{%- if page.wikipedia %}<a title="Wikipedia" href="{{ page.wikipedia }}"><i class="fab fa-wikipedia-w icon-link"></i></a>{% endif -%}
+					{%- if page.youtube %}<a title="YouTube" rel="nofollow" href="{{ page.youtube }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-youtube icon-link"></i></a>{% endif -%}
 					{%- if site.data.nextprev[page.logohandle].prev %}<a class="btn btn-secondary btn-xs" href="/logos/{{site.data.nextprev[page.logohandle].prev.logohandle}}/index.html" title="{{site.data.nextprev[page.logohandle].prev.title}} Logos"><i class="fa fa-caret-left"></i><span class="d-none d-md-inline"> {{site.data.nextprev[page.logohandle].prev.title}}</span></a>{% endif -%}
 					{%- if site.data.nextprev[page.logohandle].next %}&nbsp;<a class="btn btn-secondary btn-xs" href="/logos/{{site.data.nextprev[page.logohandle].next.logohandle}}/index.html" title="{{site.data.nextprev[page.logohandle].next.title}} Logos"><span class="d-none d-md-inline">{{site.data.nextprev[page.logohandle].next.title}} </span><i class="fa fa-caret-right"></i></a>{% endif -%}
 				</div>
-                {%- endif %}
-                {%- if page.no_h1 %}{% else %}
+				{%- endif %}
+				{%- if page.no_h1 %}{% else %}
 				<h1>{% if page.h1 %}{{ page.h1 }}{% else %}{{ page.title | default: "(untitled)"}}{% endif %}{% if page.subtitle %} <small> - {{ page.subtitle }}</small>{% endif %}</h1>
-                {%- endif %}
+				{%- endif %}
 				{{ content }}
 			</div><!--/col-->
 		</div><!--/row-->
 		{%- if page.images.size > 0 %}{% include imagelist.html %}{% elsif page.logohandle %}{% include searchresults.html %}{% endif -%}
-        {%- if page.colors %}{% include colors.html %}{% endif -%}
-        {%- if page.font %}{% include fonts.html %}{% endif -%}
-        {%- if page.logohandle -%}
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                {% include uploads.html %}
-            </div>
-        </div>
+		{%- if page.colors %}{% include colors.html %}{% endif -%}
+		{%- if page.font %}{% include fonts.html %}{% endif -%}
+		{%- if page.logohandle -%}
+		<div class="row">
+			<div class="col-md-10 col-md-offset-1">
+				{% include uploads.html %}
+			</div>
+		</div>
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
 				{% include logosearch.html %}
 			</div>
 		</div>
-        {%- endif -%}
-        {%- if page.images.size > 0 -%}
+		{%- endif -%}
+		{%- if page.images.size > 0 -%}
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
 				{% include share.html %}
@@ -65,13 +65,13 @@
 			</div>
 		</div>
 		{%- endif -%}
-        {%- if page.images.size > 0 -%}
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                {% include google-adsense.html %}
-            </div>
-        </div>
-        {%- endif -%}
+		{%- if page.images.size > 0 -%}
+		<div class="row">
+			<div class="col-md-10 col-md-offset-1">
+				{% include google-adsense.html %}
+			</div>
+		</div>
+		{%- endif -%}
 		<hr/>
 		{%- include footer.html -%}
 	</div><!--/container-->
