--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -15,8 +15,8 @@
 					{%- if page.guide %}<a title="Official Guidelines" href="{{ page.guide }}"><i class="fa fa-certificate icon-link"></i></a>{% endif -%}
 					{%- if page.website %}<a title="Website" href="{{ page.website }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fal fa-globe icon-link"></i></a>{% endif -%}
 					{%- if page.blog %}<a title="Blog" href="{{ page.blog }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fa fa-rss-square icon-link"></i></a>{% endif -%}
+					{%- if page.codehost %}<a title="Code Host" rel="nofollow" href="{{ page.codehost }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="far fa-code-branch icon-link"></i></a>{% endif -%}
 					{%- if page.facebook %}<a title="Facebook" rel="nofollow" href="{{ page.facebook }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-facebook-f icon-link"></i></a>{% endif -%}
-					{%- if page.git %}<a title="Git" rel="nofollow" href="{{ page.git }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="far fa-code-branch icon-link"></i></a>{% endif -%}
 					{%- if page.googleplus %}<a title="GooglePlus" rel="nofollow" href="{{ page.googleplus }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-google-plus-square icon-link"></i></a>{% endif -%}
 					{%- if page.instagram %}<a title="Instagram" rel="nofollow" href="{{ page.instagram }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-instagram icon-link"></i></a>{% endif -%}
 					{%- if page.linkedin %}<a title="Linkedin" rel="nofollow" href="{{ page.linkedin }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-linkedin icon-link"></i></a>{% endif -%}
