--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -14,18 +14,9 @@
 				<div class="float-right icon-link-header" style="padding-top:20px;">
 					{%- if page.guide %}<a title="Official Guidelines" href="{{ page.guide }}"><i class="fa fa-certificate icon-link"></i></a>{% endif -%}
 					{%- if page.website %}<a title="Website" href="{{ page.website }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fal fa-globe icon-link"></i></a>{% endif -%}
-					{%- if page.blog %}<a title="Blog" href="{{ page.blog }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fa fa-rss-square icon-link"></i></a>{% endif -%}
-					{%- if page.codehost %}<a title="Code Host" rel="nofollow" href="{{ page.codehost }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="far fa-code-branch icon-link"></i></a>{% endif -%}
-					{%- if page.facebook %}<a title="Facebook" rel="nofollow" href="{{ page.facebook }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-facebook-f icon-link"></i></a>{% endif -%}
-					{%- if page.googleplus %}<a title="GooglePlus" rel="nofollow" href="{{ page.googleplus }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-google-plus-square icon-link"></i></a>{% endif -%}
-					{%- if page.instagram %}<a title="Instagram" rel="nofollow" href="{{ page.instagram }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-instagram icon-link"></i></a>{% endif -%}
-					{%- if page.linkedin %}<a title="Linkedin" rel="nofollow" href="{{ page.linkedin }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-linkedin icon-link"></i></a>{% endif -%}
-					{%- if page.tumblr %}<a title="Tumblr" rel="nofollow" href="{{ page.tumblr }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-tumblr-square icon-link"></i></a>{% endif -%}
-					{%- if page.twitter %}<a title="Twitter" rel="nofollow" href="{{ page.twitter }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-twitter icon-link"></i></a>{% endif -%}
-					{%- if page.pinterest %}<a title="Pinterest" rel="nofollow" href="{{ page.pinterest }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-pinterest icon-link"></i></a>{% endif -%}
-					{%- if page.reddit %}<a title="Reddit" rel="nofollow" href="{{ page.reddit }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-reddit-alien icon-link"></i></a>{% endif -%}
-					{%- if page.wikipedia %}<a title="Wikipedia" href="{{ page.wikipedia }}"><i class="fab fa-wikipedia-w icon-link"></i></a>{% endif -%}
-					{%- if page.youtube %}<a title="YouTube" rel="nofollow" href="{{ page.youtube }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-youtube icon-link"></i></a>{% endif -%}
+					{% for socialmedia in site.data.socialmedia %}
+						{%- if page[socialmedia.id] %}<a title="{{socialmedia.id}}" href="{{ page[socialmedia.id] }}?utm_source=vectorlogozone&utm_medium=referrer">{{socialmedia.iconhtml}}</i></a>{% endif -%}
+					{% endfor %}
 					{%- if site.data.nextprev[page.logohandle].prev %}<a class="btn btn-secondary btn-xs" href="/logos/{{site.data.nextprev[page.logohandle].prev.logohandle}}/index.html" title="{{site.data.nextprev[page.logohandle].prev.title}} Logos"><i class="fa fa-caret-left"></i><span class="d-none d-md-inline"> {{site.data.nextprev[page.logohandle].prev.title}}</span></a>{% endif -%}
 					{%- if site.data.nextprev[page.logohandle].next %}&nbsp;<a class="btn btn-secondary btn-xs" href="/logos/{{site.data.nextprev[page.logohandle].next.logohandle}}/index.html" title="{{site.data.nextprev[page.logohandle].next.title}} Logos"><span class="d-none d-md-inline">{{site.data.nextprev[page.logohandle].next.title}} </span><i class="fa fa-caret-right"></i></a>{% endif -%}
 				</div>
